# Tomodoro

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NEWS  README.md  config.vapi  io.github.focustimerhq.FocusTimer.Devel.json  io.github.samet_mohamedamin.Tomodoro.json  meson.build  meson_options.txt
build-aux/flatpak/: io.github.samet_mohamedamin.Tomodoro.local.json
data/: io.github.focustimerhq.FocusTimer.desktop.in.in  io.github.focustimerhq.FocusTimer.metainfo.xml.in  io.github.samet_mohamedamin.Tomodoro.desktop.in  io.github.samet_mohamedamin.Tomodoro.gschema.xml  io.github.samet_mohamedamin.Tomodoro.metainfo.xml.in  meson.build
data/icons/: meson.build
docs/: FEATURES.md  FLATHUB.md
opencode/skills/tomodoro-todos/: SKILL.md
po/: POTFILES  ca.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  focus-timer.pot  fr.po  he.po  hr.po  id.po  it.po  ka.po  kk.po  ko.po  lt.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  ta.po  te.po  zh_CN.po
scripts/: todo-pomodoro-flatpak-install  todo-pomodoro-flatpak-launch  todo-pomodoro-launch  todo-pomodoro-update
src/: application.vala  io.github.samet_mohamedamin.Tomodoro.gresource.xml  main.vala  meson.build
src/core/: action-manager.vala  background-manager.vala  calendar-sync.vala  context-config.vala  date-utils.vala  idle-monitor.vala  indicator.vala  meson.build  notification-backend.vala  notification-manager.vala  notification.vala  pomodoro-profile.vala  project-utils.vala  provided-object.vala  provider-set.vala  screen-saver.vala  sound-manager.vala  sound-player.vala  sounds.vala  store.vala  todo.vala  utils.vala
src/plugins/: meson.build
src/plugins/freedesktop/: freedesktop.vala  interfaces.vala  lock-screen-provider.vala  meson.build  notification-backend-provider.vala
src/plugins/gnome/: gnome.vala  idle-monitor-provider.vala  indicator-provider.vala  meson.build  preferences-window-extension.vala  screen-overlay-provider.vala  shell-extension.vala
src/plugins/kde/: kde.gresource.xml  kde.plugin  kde.vala  meson.build  preferences-window-extension.vala
src/plugins/kde/data/: io.github.focustimerhq.FocusTimer.notifyrc  meson.build
src/plugins/portal/: background-provider.vala  global-shortcuts-provider.vala  interfaces.vala  meson.build  notification-backend-provider.vala  portal.vala
src/plugins/sni/: capabilities.vala  dbus-services.vala  indicator-action-group.vala  indicator-provider.vala  interfaces.vala  io.github.focustimerhq.FocusTimer.plugins.sni.gschema.xml  menu-item.vala  meson.build  preferences-window-extension.vala  sni.gresource.xml  sni.plugin  sni.vala
src/plugins/sni/icons/: index.theme
src/plugins/wayland/: ft-wayland.h  ft-wayland.vapi  idle-monitor-provider.vala  idle-monitor.c  meson.build  wayland.gresource.xml  wayland.plugin  wayland.vala
src/plugins/xfce/: interfaces.vala  meson.build  screen-saver-provider.vala  xfce.gresource.xml  xfce.plugin  xfce.vala
src/ui/: main-window.vala  pomodoro-display.vala  preferences-window.vala  recurring-dialog.vala  screen-saver-provider.vala  status-indicator.vala  style.css  todo-dialog.vala
src/ui/main/: window.vala
src/ui/main/dialogs/: about-dialog.vala
src/ui/preferences/: preferences-window.vala
src/ui/preferences/keyboard-shortcuts/: preferences-panel-keyboard-shortcuts.ui
src/ui/preferences/sounds/: sound-chooser-window.vala
tests/: meson.build  test-command.vala  test-notification-manager.vala  test-provided-object.vala  test-provider-set.vala  test-todo-core.vala
