option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development',
  ],
  value: 'default',
  description: 'The build profile for Focus Timer. One of "default" or "development".'
)
option(
  'automation',
  type: 'feature',
  value: 'enabled',
  description: 'Enable Automation panel.'
)
option(
  'plugin_gnome',
  type: 'feature',
  value: 'enabled',
  description: 'Enable GNOME integration.'
)
option(
  'plugin_kde',
  type: 'feature',
  value: 'enabled',
  description: 'Enable KDE integration.'
)
option(
  'plugin_sni',
  type: 'feature',
  value: 'enabled',
  description: 'Enable indicator.'
)
option(
  'plugin_wayland',
  type: 'feature',
  value: 'auto',
  description: 'Enable Wayland integration.'
)
option(
  'plugin_xfce',
  type: 'feature',
  value: 'enabled',
  description: 'Enable XFCE integration.'
)
